Fix logo size/spacing

--- a/styles/website.sass
+++ b/styles/website.sass
@@ -85,7 +85,7 @@ body,
     // border-top: 1px solid rgba($brand-white, 0.1);
 
     background: none;
-    margin: 1.25rem 10px;
+    margin: 0 10px 1.25rem;
     max-width: 230px;
 
     .fa-search
@@ -129,7 +129,7 @@ body,
 
 
   ul.summary
-    margin-top: 1rem;
+    margin-top: 2rem;
 
     li .stratim-logo
 
@@ -142,7 +142,7 @@ body,
 
       h2
         color: rgba($brand-white, 0.5);
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         font-weight: 400;
         text-transform: uppercase;
         letter-spacing: 2px;
